Fix link wrap
yamader/minskey#53

--- a/src/style.css
+++ b/src/style.css
@@ -101,6 +101,7 @@
 
 .mfm-link {
   color: var(--mfm-link);
+  overflow-wrap: break-word;
 }
 
 .mfm-urlHost {
